--- a/README
+++ b/README
@@ -1,36 +1,16 @@
-# Copyright (C) 2012-2014 K-Tech s.r.l. s.federici@k-tech.it
+# COLF BustePaga.
 #
-# K-Tech Django Project Template
-#
-# Version: 1.0
+# Se qualcuno vuole ampliare, la rosa delle pobililità il progetto è aperto.
+# Il programma è nato giusto per aiutarmi a fare le buste paga.
+# sono ben accetti consigli, critiche e tifo dei fan.
 # 
-# Author:  Simone Federici <s.federici@k-tech.it>
-# Date:    18/01/2012
-#
-# USE:
-#   django-admin.py startproject your_project_name \
-#     --template=https://github.com/simone/ktech-django-project-template/zipball/master
-#
-# This template is under the GNU General Public License as described below.
-#
-# This program is free software; you can redistribute it and/or modify it under 
-# the terms of the GNU General Public License as published by the Free Software 
-# Foundation; either version 2 of the License, or (at your option) any later version.
-#
-# This program is distributed in the hope that it will be useful, 
-# but WITHOUT ANY WARRANTY;  without even the implied warranty of MERCHANTABILITY 
-# or FITNESS FOR A PARTICULAR PURPOSE. 
+# License Creative Commons 
+# Attribution-NoDerivs-NonCommercial 1.0
+# by s.federici@k-tech.it
 # 
-# See the GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License 
-# along with this program; if not, write to the Free Software Foundation, 
-# Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
-#
-# Further information about the GNU GPL is available at: 
-#  * http://www.gnu.org/copyleft/gpl.ja.html
-#
-# Further information about this template is available at: 
-#  * https://github.com/simone/ktech-django-project-template/
-#  * http://www.k-tech.it/
-
+# THE WORK (AS DEFINED BELOW) IS PROVIDED UNDER THE TERMS OF THIS CREATIVE COMMONS PUBLIC LICENSE ("CCPL" OR "LICENSE"). 
+# THE WORK IS PROTECTED BY COPYRIGHT AND/OR OTHER APPLICABLE LAW. ANY USE OF THE WORK OTHER THAN AS AUTHORIZED 
+# UNDER THIS LICENSE IS PROHIBITED.
+# 
+# BY EXERCISING ANY RIGHTS TO THE WORK PROVIDED HERE, YOU ACCEPT AND AGREE TO BE BOUND BY THE TERMS OF THIS LICENSE. 
+# THE LICENSOR GRANTS YOU THE RIGHTS CONTAINED HERE IN CONSIDERATION OF YOUR ACCEPTANCE OF SUCH TERMS AND CONDITIONS
